<resources>
    <string name="app_name">Boiling Frogs</string>

    <string name="navigation_drawer_open">Otwórz menu</string>
    <string name="navigation_drawer_close">Zamknij menu</string>
    <string name="drawer_item_schedule">Agenda</string>
    <string name="drawer_item_speakers">Prelegenci</string>
    <string name="drawer_item_speech">Prelekcja</string>
    <string name="drawer_item_my_schedule">Moja konferencja</string>
    <string name="drawer_item_sponsors">Sponsorzy</string>
    <string name="drawer_item_navigation">Dojazd</string>
    <string name="drawer_item_twitter">Twitter feed</string>
    <string name="drawer_item_survey">Ankieta</string>

    <string name="toolbar_title_speech">Prelekcja</string>
    <string name="toolbar_title_speaker">Prelegent</string>

    <string name="my_schedule_path">ŚCIEŻKA</string>

    <string name="speech_added_to_favorites">Prelekcja dodana do ulubionych</string>
    <string name="speech_removed_from_favorites">Prelekcja usunięta z ulubionych</string>

    <string name="my_schedule_empty_slot_text">Wybierz prelekcję</string>

    <!-- Speech slots -->
    <string name="speech_slots_first">10:00 - 11:00</string>
    <string name="speech_slots_second">11:15 - 12:15</string>
    <string name="speech_slots_third">13:15 - 14:15</string>
    <string name="speech_slots_fourth">14:30 - 15:30</string>
    <string name="speech_slots_fifth">15:45 - 16:45</string>
    <string name="speech_slots_sixth">17:00 - 18:00</string>
</resources>
